crates/kotlin-syntax/src/parser/grammar/snapshots/kotlin_syntax__parser__grammar__types__tests__definitely_non_nullable_type.snap
---
source: crates/kotlin-syntax/src/parser/grammar/types.rs
expression: out
---
StartNode(DEFINITELY_NON_NULLABLE_TYPE)
Tombstone
StartNode(USER_TYPE)
AddToken
FinishNode
AddToken
StartNode(USER_TYPE)
AddToken
FinishNode
FinishNode
