crates/kotlin-syntax/src/parser/grammar/snapshots/kotlin_syntax__parser__grammar__types__tests__function_type.snap
---
source: crates/kotlin-syntax/src/parser/grammar/types.rs
expression: out
---
StartNode(TYPE)
StartNode(FUNCTION_TYPE)
StartNode(VALUE_PARAMETERS)
AddToken
StartNode(TYPE)
Tombstone
StartNode(USER_TYPE)
AddToken
FinishNode
FinishNode
AddToken
StartNode(TYPE)
Tombstone
StartNode(USER_TYPE)
AddToken
FinishNode
FinishNode
AddToken
FinishNode
AddToken
StartNode(TYPE)
Tombstone
StartNode(USER_TYPE)
AddToken
FinishNode
FinishNode
FinishNode
FinishNode
