crates/kotlin-syntax/src/parser/grammar/snapshots/kotlin_syntax__parser__grammar__types__tests__generic_type_arguments.snap
---
source: crates/kotlin-syntax/src/parser/grammar/types.rs
expression: out
---
StartNode(TYPE)
Tombstone
StartNode(USER_TYPE)
AddToken
StartNode(TYPE_ARGUMENTS)
AddToken
StartNode(TYPE_PROJECTION)
StartNode(TYPE)
Tombstone
StartNode(USER_TYPE)
AddToken
FinishNode
FinishNode
FinishNode
AddToken
StartNode(TYPE_PROJECTION)
AddToken
StartNode(TYPE)
Tombstone
StartNode(USER_TYPE)
AddToken
StartNode(TYPE_ARGUMENTS)
AddToken
StartNode(TYPE_PROJECTION)
StartNode(TYPE)
Tombstone
StartNode(USER_TYPE)
AddToken
FinishNode
FinishNode
FinishNode
AddToken
FinishNode
FinishNode
FinishNode
FinishNode
AddToken
FinishNode
FinishNode
FinishNode
