crates/kotlin-syntax/src/parser/grammar/snapshots/kotlin_syntax__parser__grammar__types__tests__parenthesized_type.snap
---
source: crates/kotlin-syntax/src/parser/grammar/types.rs
expression: out
---
StartNode(TYPE)
StartNode(PARENTHESIZED_TYPE)
AddToken
StartNode(TYPE)
Tombstone
StartNode(USER_TYPE)
AddToken
FinishNode
FinishNode
AddToken
FinishNode
FinishNode
