crates/kotlin-syntax/src/parser/grammar/snapshots/kotlin_syntax__parser__grammar__types__tests__star_projection.snap
---
source: crates/kotlin-syntax/src/parser/grammar/types.rs
expression: out
---
StartNode(TYPE)
Tombstone
StartNode(USER_TYPE)
AddToken
StartNode(TYPE_ARGUMENTS)
AddToken
StartNode(TYPE_PROJECTION)
AddToken
FinishNode
AddToken
FinishNode
FinishNode
FinishNode
